--- a/src/app/config/config.component.html
+++ b/src/app/config/config.component.html
@@ -1,9 +1,10 @@
 
 <div class="container">
   <h1>Configuração</h1>
-  <form #configForm="ngForm" >
+  <form #configForm="ngForm">
+
     <div class="form-group">
-      <label for="serverURL">URL do Servidor</label>
+      <label for="serverURL">URL do Servidor:</label>
       <input type="text"  [(ngModel)]="config.serverURL" class="form-control" id="serverURL" name="serverURL" #serverURL="ngModel" required>
       <div [hidden]="serverURL.valid || serverURL.pristine" class="alert alert-danger">
            Campo requerido!
@@ -11,11 +12,18 @@
     </div>
 
     <div class="form-group">
-      <label for="productKey">Chave do Produto</label>
+      <label for="productKey">Chave do Produto:</label>
       <input type="text" [(ngModel)]="config.productKey" class="form-control" id="productKey" name="productKey" #productKey="ngModel" required>
       <div [hidden]="productKey.valid || productKey.pristine" class="alert alert-danger">
         Campo requerido!
       </div>
+    </div>
+    
+    <div class="form-group">
+      <label for="updateTimer">Frequência de atualização (minutos):</label>
+      <select [(ngModel)]="config.updateTimer" class="form-control" id="updateTimer" name="updateTimer">
+         <option *ngFor="let intervalo of listaIntervalosAtualizacao" [value]="intervalo">{{intervalo}}</option>
+      </select>
     </div>
 
     <button type="submit" [disabled]="!configForm.form.valid" class="btn btn-default" (click)="saveConfig()">Salva</button>
