--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,8 +1,7 @@
 <div *ngIf="messageService.messages.length">
 
-  <h2>Messages</h2>
-  <button class="clear"
-          (click)="messageService.clear()">clear</button>
-  <div *ngFor='let message of messageService.messages'> {{message}} </div>
-
+  <button class="clear" (click)="messageService.clear()"><mat-icon>check_circle</mat-icon>
+    <span *ngFor='let message of messageService.messages'> {{message}} </span>  
+  </button>
+  
 </div>
